fix: cant filter on mobile (#1643) (#1642)
* fix: testing support

* fix: testing support

* fix: new var

* fix: try support toggle

* fix: try support toggle 2

* fix: try support toggle 2

* fix: try support toggle 2

--- a/sites/public/styles/overrides.scss
+++ b/sites/public/styles/overrides.scss
@@ -156,7 +156,17 @@
 
   .drawer {
     --content-padding: 0;
-    --content-height: 100%;
+    @supports (height: 100dvh) {
+      height: 100dvh;
+    }
+
+    @supports not (height: 100dvh) {
+      .drawer__body {
+        @media (max-width: $screen-sm) {
+          padding-bottom: var(--bloom-s32);
+        }
+      }
+    }
   }
 
   .page-header {
